<resources>
    <string name="app_name">ASF Performance</string>
    <string name="title_home">Home</string>
    <string name="title_info">Info</string>
    <string name="title_profile">Profile</string>
    <string name="title_classes">Classes</string>
    <string name="welcome">JOIN OUR FAMILY</string>
    <string name="admin">Admin</string>
    <string name="date">Pick a date</string>


    <!-- Profile Fragment -->
    <string name="profile_top_text">Profile</string>
    <string name="profile_name_label">Name</string>
    <string name="profile_surname_label">Surname</string>
    <string name="profile_height_label">Height(cm)</string>
    <string name="profile_weight_label">Weight(kg)</string>
    <string name="profile_date_started">Date Started</string>
    <string name="profile_id">ID</string>
    <string name="title_activity_admin_menu">AdminMenu</string>
    <string name="title_activity_class">ClassActivity</string>
    <string name="profile_user_reset">Reset All</string>
    <string name="profile_user_view_classes">View Your Classes</string>
    <string name="user_classes">Your Classes</string>

    <string name="register">Register</string>
    <string name="register_email">Email</string>
    <string name="register_telephone">Phone Number</string>
    <string name="register_register">Register</string>


    =======

    <!-- Gym Info -->
    <string name="address">3, Lefkonoikou street, 3071, Limassol-Cyprus </string>
    <string name="email">as.fitness.cy@gmail.com</string>
    <string name="telephone">+357 99851085</string>
    <string name="emailMYT">mytsolutionscy@gmail.com</string>
    <string name="class_view_time">Time:</string>
    <string name="class_view_spaces">Spaces Left:</string>
    <string name="class_capacity">Class capacity</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="wendesday">Wendesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="oneMonth">For one month</string>
    <string name="threeMonths">For 3 months</string>
    <string name="time">Time</string>
    <string name="semicolon">:</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="register_class">Register Class</string>
    <string name="add">ADD</string>
    <string name="singleClass">For one time</string>
    <string name="title_activity_user_details">UserDetails</string>
    >>>>>>> 341a3383f599be28888aae60b70507da763699b5

</resources>
